# p-init-backup

./: README.md
c/docs/source/: api.rst  design.rst.m4  index.rst.m4
c/files/: CMakeLists.txt  Makefile.am.m4  configure.ac.m4  game-loop.c  sdl-base.c
c/files/include/utils/misc/: .common.h.m4.swp  args.h.m4  common.h.m4  logger.h.m4  project-common.h.m4  project-handle-args.h.m4  project-log.h.m4  project-status-codes.h.m4  status-codes.h.m4
c/files/scripts/: .Rlinter.swp  .c-init.swp  Rlinter  c-init  work  workon  workwith
c/files/scripts/vimscript/: check-template.tpl  r-comment-template.vim
c/files/sdl-base/: .gitignore  .travis.yml  CMakeLists.txt  FindAvailableSIMDExtensions.cmake  FindSIMD.cmake  appveyor.yml  bit-array.c  common.h.in  game-config.h.in  opt-notes.txt  sdl-base.c  status-codes.c  status-codes.h
c/files/sdl-base/CMake/Modules/: FindAvailableSIMDExtensions.cmake  FindSDL2.cmake  FindSDL2_image.cmake  GameBuildTypes.cmake  GameVersion.cmake
c/files/sdl-base/args/: args.c
c/files/sdl-base/include/: common.h.in
c/files/sdl-base/include/utils/: status-codes.h  status.h
c/files/sdl-base/server/: chat-server.c  game-server.c  game-server.conf  server.c
c/files/sdl-base/src/: main.c
c/files/sdl-base/src/assets/: assets.c  tetromino.c
c/files/sdl-base/src/assets/colour/: colour.c  tetromino.c
c/files/sdl-base/src/core/: audio.c  character.c  engine.c  events.c  flappy.c  font.c  game-loop.c  game.c  sdl-base.c  snake.c  sprite.c  surface.c  tetris.c  tetris.txt  texture.c  tilemap.c  worms.c
c/files/sdl-base/src/data-structures/: stretch-buf.c  stretchy-buffers.c
c/files/sdl-base/src/ecs/components/: components-list.h  displacement.h
c/files/sdl-base/src/ecs/entities/: entity-manager.h
c/files/sdl-base/src/server/: cpp-guy.c
c/files/sdl-base/src/utils/: args.c  assert.h  helpers.h  log.h  status-codes.c
c/files/sdl-base/src/wrappers/: sdl-log.c
c/files/sdl-base/tests/: exampleTestSuite.c  test.c
c/files/src/: project.c.m4
c/files/src/core/: project.c.m4
c/files/src/utils/misc/: args.c.m4  logger.c.m4  project-args.c.m4  project-handle-args.c.m4  project-log.c.m4  project-status-codes.c.m4  status-codes.c.m4
c/git/: .CODE-STYLE.md.swp  .gitignore  AUTHORS.md.m4  CODE-STYLE.md  LICENSE.md.m4  README.md.m4  _config.yml.m4  index.md
c/travis_ci/: .travis.yml  appveyor.yml
